[package]
name = "goup"
version = "0.1.1"
authors = ["Joseph Skubal"]
repository = "https://github.com/skubalj/goup"
description = "Version management for Go a la rustup"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
console = "0.15.5"
flate2 = "1.0.25"
home = "0.5.4"
indicatif = "0.17.3"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tar = "0.4.38"
ureq = { version = "2.5.0", features = ["json"] }
