[package]
name = "goup"
version = "0.1.1"
authors = ["Joseph Skubal"]
repository = "https://github.com/skubalj/goup"
description = "Version management for Go a la rustup"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
flate2 = "1.0.28"
home = "0.5.9"
indicatif = "0.17.8"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tar = "0.4.40"
ureq = { version = "2.9.6", features = ["json"] }
